Fixed paypal overlap for all screens

--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -59,7 +59,7 @@
 
 @media only screen and (min-width: 780px) {
 	.checkout-container {
-		margin: 5em 13em 2em 13em;
+		margin: 5em 20em 2em 20em;
 	}
 	.checkout-container legend {
 		margin-left: 1.6%;
